--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.scss
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.scss
@@ -15,4 +15,11 @@
       text-decoration: underline;
     }
   }
+
+  .subject {
+    fa-icon {
+      position: relative;
+      top: 2px;
+    }
+  }
 }
