Null option to subject day creation

--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -26,6 +26,7 @@
       <mat-form-field class="pl-h" *ngIf="subjectList?.length" [appearance]="'inputAppearance' | settingValue" color="accent" fxFlex="50">
         <mat-label>{{'FORM.SUBJECT' | translate}}</mat-label>
         <mat-select formControlName="daySubjectCtrl" attr.aria-label="{{'FORM.SUBJECT' | translate}}">
+          <mat-option>-- {{'NONE' | translate}} --</mat-option>
           <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
             {{subject.name}}
           </mat-option>
