--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.scss
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.scss
@@ -22,4 +22,9 @@
       top: 2px;
     }
   }
+
+  .day-content-containaer {
+    box-sizing: border-box;
+    height: calc(var(--vh, 1vh) * 100 - var(--main-header-size) * 2 - 86px);
+  }
 }
